erDiagram
    organizations ||--o{ users : has
    organizations ||--o{ departments : has
    organizations ||--o{ rooms : has
    organizations ||--o{ requests : receives
    organizations ||--o{ workflows : manages

    users ||--o{ requests : "submits (guest)"
    users ||--o{ workflows : assigned_to
    departments ||--o{ workflows : routes_to
    rooms ||--o{ requests : originates_from

    requests ||--o| transcriptions : has
    requests ||--o| ai_classifications : has
    requests ||--|| workflows : generates
    workflows ||--o{ workflow_events : has

    organizations ||--o{ integrations : configures
    integrations ||--o{ integration_events : logs
    integrations ||--o{ field_mappings : maps
